--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,9 +8,12 @@
     </head>
     <body>
         <script>
-            alert ("драствуйте!!");
+            alert ("драствуйте!!!  ");
             document.write("<hl> HEEELLOOOO </hl>");
             console.log ("Здраствуйте школа!!");
+            
+            var name = prompt ("Введите плиз ваше имя!");
+            alert ("Hello " + name);
             
         </script>    
     </body>
